tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_cannot_determine_type_of_generic_argument_in_enum_constructor/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Type annotation needed
  ┌─ src/main.nr:8:22
  │
8 │         let _ = Foo::Bar;
  │                      --- Could not determine the type of the generic argument `T` declared on the enum `Foo`
  │

Aborting due to 1 previous error
